// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Avatar Tests Adding an image passes the url to the css 1`] = `
.c0 {
  width: 24px;
  height: 24px;
  border-radius: 10%;
  background-image: url(http://localhost/TestImage.jpg);
  background-size: cover;
}

<div>
  <div
    class="c0"
  />
</div>
`;

exports[`Avatar Tests Adding the box shadow prop matches the snapshot 1`] = `
.c0 {
  width: 24px;
  height: 24px;
  border-radius: 10%;
  background-image: url();
  background-size: cover;
  box-shadow: 0 0 5px rgba(0,0,0,0.4);
}

<div>
  <div
    class="c0"
  />
</div>
`;

exports[`Avatar Tests Changing the size to large has the correct size 1`] = `
.c0 {
  width: 64px;
  height: 64px;
  border-radius: 10%;
  background-image: url();
  background-size: cover;
}

<div>
  <div
    class="c0"
  />
</div>
`;

exports[`Avatar Tests Changing the size to medium has the correct size 1`] = `
.c0 {
  width: 44px;
  height: 44px;
  border-radius: 10%;
  background-image: url();
  background-size: cover;
}

<div>
  <div
    class="c0"
  />
</div>
`;

exports[`Avatar Tests Changing the size to tiny has the correct size 1`] = `
.c0 {
  width: 16px;
  height: 16px;
  border-radius: 10%;
  background-image: url();
  background-size: cover;
}

<div>
  <div
    class="c0"
  />
</div>
`;

exports[`Avatar Tests Setting the border radius to round matches the snapshot 1`] = `
.c0 {
  width: 24px;
  height: 24px;
  border-radius: 50%;
  background-image: url();
  background-size: cover;
}

<div>
  <div
    class="c0"
  />
</div>
`;

exports[`Avatar Tests Setting the border radius to square matches the snapshot 1`] = `
.c0 {
  width: 24px;
  height: 24px;
  border-radius: 0;
  background-image: url();
  background-size: cover;
}

<div>
  <div
    class="c0"
  />
</div>
`;
